syntax = "proto2";

package com.scalableminds.webknossos.datastore;

import "geometry.proto";

message SegmentToBucketIndexEntry {
  required int64 segmentId = 1;
  repeated Vec3IntProto bucketPosition = 2;
}

message SegmentToBucketIndex {
  repeated SegmentToBucketIndexEntry entry = 1;
}
